inclusão e configuração do swagger